Resolved the top margin + header overlap issue

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -7,3 +7,7 @@
 
 }
 
+.topMargin{
+    margin-top: 20px;
+    padding-top: 20px;
+}
